feat: improve comment endpoints and add comment reqs to swagger
