# src/models/gym/routes.js
@@ -5,7 +5,10 @@ const router = express.Router()
 const gymController = require('./controller')
 const middlewares = require('../../middlewares')
 
-router.post('/', middlewares.isAdmin, gymController.create)
+router.post('/', [
+    middlewares.auth,
+    middlewares.isAdmin
+], gymController.create)
 router.get('/:id', gymController.getById)
 router.get('/', gymController.getAll)
 router.put('/:id', [
